# CardShuffler

./: Cargo.toml  README.md  shuffle.py
src/: badam_sat.rs  game.rs  judgement.rs  main.rs  mendhi_kot.rs  pach_tin_don.rs  utils.rs
