[package]
name = "card_shuffler"
version = "0.1.0"
authors = ["Mihir Gadgil <16473290+scimas@users.noreply.github.com>"]
edition = "2021"
description = "Playing card shuffling utility for many multiplayer games."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
rand_pcg = "0.2"
itertools = "0.9"
